--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formbricks/js": "^4.1.0",
     "@tailwindcss/vite": "^4.1.5",
+    "framer-motion": "^12.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
