--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@formbricks/js": "^4.1.0",
     "@tailwindcss/vite": "^4.1.5",
     "framer-motion": "^12.9.4",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
