--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,43 @@
 
 services:
-  php:
-    build:
-      context: .
-      dockerfile: docker/php/Dockerfile
-    container_name: symfony_php
-    volumes:
-      - ./backend:/var/www/html
-    depends_on:
-      - mysql
+  # mysql:
+  #   image: mysql:8
+  #   container_name: dev_mysql
+  #   restart: unless-stopped
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #     MYSQL_DATABASE: symfony
+  #     MYSQL_USER: symfony
+  #     MYSQL_PASSWORD: symfony
+  #   volumes:
+  #     - mysql_data:/var/lib/mysql
+  #   ports:
+  #     - "3306:3306"
 
-  nginx:
-    image: nginx:stable-alpine
-    container_name: symfony_nginx
-    ports:
-      - "8080:80"
-    volumes:
-      - ./backend:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
+  # php:
+  #   build:
+  #     context: ./backend
+  #     dockerfile: ../docker/php/Dockerfile
+  #   container_name: dev_php
+  #   ports:
+  #     - "8000:8000"
+  #   volumes:
+  #     - ./backend:/app
+  #   depends_on:
+  #     - mysql
 
-  mysql:
-    image: mysql:8.0
-    container_name: symfony_mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: symfony
-      MYSQL_USER: symfony
-      MYSQL_PASSWORD: symfony
-    volumes:
-      - db_data:/var/lib/mysql
-    ports:
-      - "3307:3306"
 
   frontend:
-    image: node:18
-    container_name: react_vite
     build:
       context: ./frontend
-      dockerfile: Dockerfile
-    working_dir: /app
-    volumes:
-      - ./frontend:/app
+      dockerfile: ../docker/Dockerfile
+    container_name: react_vite
     ports:
       - "5173:5173"
-    command: sh -c "npm install && npm run dev -- --host"
+    volumes:
+      - ./frontend:/app
+    stdin_open: true
+    tty: true
 
 volumes:
-  db_data:
+  mysql_data:
