--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     root /var/www/html/public;
-    index index.php index.html;
+    index index.php;
 
     location / {
         try_files $uri /index.php$is_args$args;
@@ -11,10 +11,11 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass php:9000;
+        fastcgi_pass php:9000; # Forward to PHP-FPM container
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    location ~ /\.ht {
+        deny all;
+    }
 }
